<resources>
    <string name="app_name">To Do List 2</string>
    <string name="to_do_list_splash_screen">To-Do List</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="view_history_of_finished_tasks">View history of finished tasks.</string>
    <string name="add_a_new_todo">Add a new todo.</string>
    <string name="delete_a_category">Delete a category.</string>
    <string name="new_category_name">New category name</string>
    <string name="delete_category_text">Delete the category \'%1$s\'? Any todos in this category will also be deleted.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard?</string>
    <string name="back">Back</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="new_task">New Task</string>
    <string name="title">Title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
    <string name="select_category">Select category</string>
    <string name="save_task">Save Task</string>
    <string name="ok">OK</string>
</resources>