<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textCursorDrawable="@drawable/cursor"
        android:hint="@string/new_category_name"
        android:maxLength="14"
        android:background="@drawable/searchview_background"
        android:padding="12dp"
        android:id="@+id/new_category_name"
        android:textColorHint="@color/white2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/new_category_name">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/new_category_ok"
            android:background="@color/black"
            android:textColor="@color/green"
            android:text="@string/ok"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/new_category_cancel"
            android:background="@color/black"
            android:textColor="@color/green"
            android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>