<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="false"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/not_found_anim_history"
        tools:visibility="visible"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/not_found"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_to_show"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_below="@+id/not_found_anim_history"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/empty_list_history" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_history"
        android:background="@color/gray_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:id="@+id/toolbar_history_back"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/white"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content"
            android:text="@string/finished_tasks"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/toolbar_history"
        android:id="@+id/todoRv"
        tools:itemCount="3"
        tools:listitem="@layout/todo_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>